--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
 
 	<div class="wrap">
-		<div id="listPark"></div>
+		<div id="slotParking"></div>
+		<div id="listParking"></div>
 
 		<div class="wrap-button">
 			<button onclick="createSlot()">Create parking a lof of size</button>
