status park with table

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
 			<button onclick="parkOut()">Remove car from</button>
 			<button onclick="statusPark()">Status of parking slot</button>
 		</div>
+
+		<table id="customers">
+			<thead>
+				<tr>
+					<th>Slot No</th>
+					<th>Registration No</th>
+					<th>Registration Color</th>
+				</tr>
+			</thead>
+			<tbody id="tableData"></tbody>
+		</table>
+
+		<button id="closetable" onclick="hidetable()">Close Table</button>
 	</div>
 	
 
